force-app/main/default/objects/SPAJK__c/SPAJK__c.object-meta.xml
<CustomObject>
    <label>SPAJK</label>
    <nameField>
        <label>SPAJK Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPAJK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>