force-app/main/default/objects/SPAJK__c/fields/Approval_At__c.field-meta.xml
<CustomField>
    <fullName>Approval_At__c</fullName>
    <label>Approval At</label>
    <type>Date</type>
</CustomField>