force-app/main/default/objects/SPAJK__c/fields/Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_By__c</fullName>
    <label>Approval By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>