force-app/main/default/objects/SPAJK__c/fields/Approval_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_ID__c</fullName>
    <label>Approval ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>