force-app/main/default/objects/SPAJK__c/fields/Extra_Premium_Rate_To_Cust__c.field-meta.xml
<CustomField>
    <fullName>Extra_Premium_Rate_To_Cust__c</fullName>
    <label>Extra Premium Rate To Cust</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>