force-app/main/default/objects/SPAJK__c/fields/RefHistory_Survey__c.field-meta.xml
<CustomField>
    <fullName>RefHistory_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefHistory_Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>SPAJK (RefHistory_Survey)</relationshipLabel>
    <relationshipName>SPAJK1</relationshipName>
    <type>Lookup</type>
</CustomField>