force-app/main/default/objects/SPAJK__c/fields/Request_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Document_Type__c</fullName>
    <label>Request Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>