force-app/main/default/objects/SPAJK__c/fields/Result_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Result_Document_ID__c</fullName>
    <label>Result Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>